--- a/index.html
+++ b/index.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Nicole's first site</title>
+<link rel='stylesheet' type='text/css' href=style.css>
+<header>
+
+<div id=Home class='hyper'>
 <h1><strong>Hello</strong></h1>
+<ul>
+<li><a href="#About">About me</a></li>
+<li><a href="psycholgy_page">Some Psychology stuff</a></li>
+<li><a href='#food'>Food</a></li>
+</ul>
+</div>
+</header>
+<div class="clouds">
+<p> some texting </p>
+<p> here is some more text </p>
+<p> and more!</p>
+</div>
+<div class="article">
+<p> An article on PCI
+
+
+<strong>Purpose:</strong> To investigate the efficacy of parent–child interaction therapy (PCIT) with young children who stutter.
+
+<strong>Method:</strong> This is a longitudinal, multiple single-subject study. The participants were 6 children aged 3;3–4;10 [years;months] who had been stuttering for longer than 12 months. Therapy consisted of 6 sessions of clinic-based therapy and 6 weeks of home consolidation. Speech samples were videorecorded during free play with parents at home and analyzed to obtain stuttering data for each child before therapy, during therapy, and up to 12 months posttherapy.
+
+<strong>Results:</strong> Stuttering frequency data obtained during therapy and posttherapy were compared with the frequency and variability of stuttering in the baseline phase. Four of the 6 children significantly reduced stuttering with both parents by the end of the therapy phase.
+
+<strong>Conclusions:</strong> PCIT can reduce stuttering in preschool children with 6 sessions of clinic-based therapy and 6 weeks of parent-led, home-based therapy. The study highlights the individual response to therapy. Suggestions for future research directions are made.
+
+</p>
+
+</div>
+<div id='About'>
 <h2><em>About Me</em></h2>
 <body>
 <ul>
@@ -8,4 +42,9 @@
 <li>Wrote my dissertation on the emotions of goats and spent 6 weeks conducting a Pavlov like experiment on them to improve their welfare</li>
 <li>Currently working at the <a href="http://www.stammeringcentre.org/mpc-home">Michael Palin Centre for Stammering</a></li>
 </ul>
+</div>
+
+<img src="https://media.giphy.com/media/l41lG2QN72EPHWwkE/giphy.gif">
 </body>
+</head>
+</html>
